--- a/SegCreate/segment_create_main.ui
+++ b/SegCreate/segment_create_main.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>894</height>
+    <height>909</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -38,46 +38,46 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>170</y>
+      <y>140</y>
       <width>151</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>2. 세그먼트 리스트</string>
+     <string>2. Segment List</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>320</y>
-      <width>111</width>
+      <y>270</y>
+      <width>151</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>3. 세그먼트 순서</string>
+     <string>3. Segment Sequence</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>450</y>
+      <y>400</y>
       <width>111</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>4. 세그먼트 Prefix</string>
+     <string>4. Segment Prefix</string>
     </property>
    </widget>
    <widget class="QPushButton" name="segmentList">
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>190</y>
+      <y>160</y>
       <width>101</width>
       <height>23</height>
      </rect>
@@ -90,7 +90,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>340</y>
+      <y>290</y>
       <width>101</width>
       <height>23</height>
      </rect>
@@ -102,9 +102,9 @@
    <widget class="QLineEdit" name="segmentPrefix">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>470</y>
-      <width>221</width>
+      <x>50</x>
+      <y>420</y>
+      <width>241</width>
       <height>31</height>
      </rect>
     </property>
@@ -113,13 +113,13 @@
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>820</y>
+      <y>800</y>
       <width>75</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>확인</string>
+     <string>complete</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_5">
@@ -132,40 +132,14 @@
      </rect>
     </property>
     <property name="text">
-     <string>GMC 닷컴팀</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_6">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>190</y>
-      <width>131</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>*csv 파일만 넣어주세요</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_7">
-    <property name="geometry">
-     <rect>
-      <x>170</x>
-      <y>340</y>
-      <width>131</width>
-      <height>16</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>*csv 파일만 넣어주세요</string>
+     <string>GMO 운영팀</string>
     </property>
    </widget>
    <widget class="QLabel" name="segmentPrefix_print">
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>500</y>
+      <y>450</y>
       <width>251</width>
       <height>16</height>
      </rect>
@@ -174,51 +148,25 @@
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_8">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>220</y>
-      <width>31</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>입력:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_9">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>370</y>
-      <width>31</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>입력:</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_10">
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>510</y>
-      <width>31</width>
+      <y>460</y>
+      <width>41</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>입력:</string>
+     <string>Enter:</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser_segList">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>220</y>
-      <width>261</width>
+      <x>50</x>
+      <y>190</y>
+      <width>301</width>
       <height>61</height>
      </rect>
     </property>
@@ -226,9 +174,9 @@
    <widget class="QTextBrowser" name="textBrowser_segSeq">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>370</y>
-      <width>261</width>
+      <x>50</x>
+      <y>320</y>
+      <width>301</width>
       <height>61</height>
      </rect>
     </property>
@@ -237,7 +185,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>480</y>
+      <y>430</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -250,7 +198,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>510</y>
+      <y>460</y>
       <width>231</width>
       <height>21</height>
      </rect>
@@ -263,22 +211,22 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>550</y>
+      <y>580</y>
       <width>141</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>5. Current Segment</string>
+     <string>6. Current Segment</string>
     </property>
    </widget>
    <widget class="QTextBrowser" name="textBrowser_currentSeg">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>610</y>
-      <width>271</width>
-      <height>61</height>
+      <x>50</x>
+      <y>630</y>
+      <width>291</width>
+      <height>51</height>
      </rect>
     </property>
    </widget>
@@ -286,7 +234,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>570</y>
+      <y>600</y>
       <width>111</width>
       <height>23</height>
      </rect>
@@ -295,26 +243,13 @@
      <string>Folder Upload</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_13">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>610</y>
-      <width>31</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>입력:</string>
-    </property>
-   </widget>
    <widget class="QTextBrowser" name="textBrowser_segArc">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>50</x>
       <y>740</y>
-      <width>271</width>
-      <height>61</height>
+      <width>291</width>
+      <height>51</height>
      </rect>
     </property>
    </widget>
@@ -322,33 +257,20 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>680</y>
+      <y>690</y>
       <width>121</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>6. Segment Archive</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_15">
-    <property name="geometry">
-     <rect>
-      <x>30</x>
-      <y>740</y>
-      <width>31</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>입력:</string>
+     <string>7. Segment Archive</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_segArc">
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>700</y>
+      <y>710</y>
       <width>111</width>
       <height>23</height>
      </rect>
@@ -361,7 +283,7 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>70</y>
+      <y>50</y>
       <width>91</width>
       <height>16</height>
      </rect>
@@ -374,7 +296,7 @@
     <property name="geometry">
      <rect>
       <x>300</x>
-      <y>100</y>
+      <y>80</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -387,7 +309,7 @@
     <property name="geometry">
      <rect>
       <x>70</x>
-      <y>130</y>
+      <y>110</y>
       <width>231</width>
       <height>21</height>
      </rect>
@@ -400,36 +322,127 @@
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>130</y>
-      <width>31</width>
+      <y>110</y>
+      <width>41</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>입력:</string>
+     <string>Enter:</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="textLine_owner">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>90</y>
-      <width>221</width>
+      <x>50</x>
+      <y>70</y>
+      <width>241</width>
       <height>31</height>
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="label_18">
+   <widget class="Line" name="line">
     <property name="geometry">
      <rect>
-      <x>170</x>
-      <y>70</y>
-      <width>121</width>
+      <x>10</x>
+      <y>560</y>
+      <width>381</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="property_then">
+    <property name="geometry">
+     <rect>
+      <x>140</x>
+      <y>530</y>
+      <width>51</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>*공용계정 : 200043605</string>
+     <string>then</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="property_thenpv">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>530</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>then 1 pv</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="property_thenhit">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>530</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>then 1 hit</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>500</y>
+      <width>71</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>5. property</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="property_or">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>530</y>
+      <width>31</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>or</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="property_and">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>530</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>and</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>850</y>
+      <width>191</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>sunkyeong.lee@concentrix.com</string>
     </property>
    </widget>
   </widget>
